fixed collapseable nav bar on smaller screens

--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@ body {
 
 .nav-link {
 	font-size: 20px;
-	margin-top: 25px;
+	margin-top: 20px;
+}
+
+.nav-item {
+	background-color: #F8F8F8;
 }
 
 .navbar {
